[workspace]
resolver = "2"
members = ["anise", "anise-cli", "anise-gui", "anise-py", "anise/fuzz", "anise-cpp"]

[workspace.package]
version = "0.9.6"
edition = "2021"
authors = ["Christopher Rabotin <christopher.rabotin@gmail.com>"]
description = "ANISE provides a toolkit and files for Attitude, Navigation, Instrument, Spacecraft, and Ephemeris data. It's a modern replacement of NAIF SPICE file."
homepage = "https://nyxspace.com/"
documentation = "https://docs.rs/anise/"
repository = "https://github.com/nyx-space/anise"
keywords = ["attitude", "navigation", "instrument", "spacecraft", "ephemeris"]
categories = ["science", "simulation"]
readme = "README.md"
license = "MPL-2.0"
exclude = [
    "cspice*",
    "data",
    "analysis",
    ".vscode",
    ".github",
    ".venv",
    ".vscode",
    "*.sh",
    "*.png"
]

[workspace.dependencies]
hifitime = { version = "4.2.5", default-features = false }
memmap2 = "0.9.4"
crc32fast = { version = "1.4.2", default-features = false }
der = { version = "0.7.8", default-features = false, features = ["derive", "alloc", "real"] }
log = "0.4"
pretty_env_logger = "0.5"
tabled = { version = "=0.20", default-features = false, features = ["derive"] }
nalgebra = { version = "0.34", default-features = false, features = [
    "serde-serialize-no-std", "libm",
] }
zerocopy = { version = "0.8.0", default-features = false, features = ["derive"] }
bytes = { version = "1.6.0", default-features = false }
snafu = { version = "0.9.0", default-features = false, features = ["alloc"] }
rstest = "0.26.1"
pyo3 = { version = "0.28", features = ["multiple-pymethods"] }
pyo3-log = "0.13.3"
numpy = "0.28"
ndarray = ">= 0.17, < 0.18"
rayon = "1.10.0"
cxx = "1.0"

anise = { path = "anise", default-features = false }

[profile.bench]
debug = true

[profile.release]
codegen-units = 1
lto = "thin"
